# UCI-Grabber

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  maia-wheelhouse-review.yml  release.yml
catalog/: README.md  catalog-public-key.pem  catalog.json  catalog.pub  catalog.sig  generate_catalog.py  validate_catalog.py  verify_catalog.py
catalog/schema/: catalog-v1.schema.json  recipe-v1.schema.json
catalog/tests/: test_catalog.py
catalog/tests/fixtures/: valid-recipe.json
docs/: DEVELOPMENT.md  RECIPE_FORMAT.md  RELEASING.md  SECURITY.md
packaging/: verify_macos_deployment.py
packaging/app/: package_app.py
packaging/app/tests/: test_package_app.py
packaging/licenses/: about.hbs  about.toml
packaging/maia3/: DIRECT-DOWNLOAD-NOTICES.txt  README.md  build_runtime.py  build_wheel_lock.py  component-metadata.json  corresponding-source-policy.json  direct-downloads.json  maia3.spec  maia3_entry.py  make_source_bundle.py  package_launcher.py  package_runtime.py  release-review.json  requirements-direct.txt  review_digest.py  smoke_fake_python.rs  smoke_personalized_launcher.py  smoke_runtime.py  validate_metadata.py  verify_file.py
packaging/maia3/tests/: test_component.py  test_direct_launcher.py
packaging/maia3/wheelhouse-review-candidate/: linux-aarch64.json  linux-x86_64.json  macos-aarch64.json  windows-x86_64.json
src/: app.rs  catalog.rs  download.rs  error.rs  extract.rs  handoff.rs  install.rs  lib.rs  main.rs  recipes.rs  registry.rs  schema.rs  uci.rs
