[package]
name = "uci-grabber"
version = "0.2.1"
edition = "2024"
rust-version = "1.92"
license = "Apache-2.0"
repository = "https://github.com/EnchiladaBoy/UCI-Grabber"
description = "A safe installer for complete UCI chess engine packages"
default-run = "uci-grabber"

[lib]
name = "uci_grabber"
path = "src/lib.rs"

[[bin]]
name = "uci-grabber"
path = "src/main.rs"

[[bin]]
name = "uci-grabber-gui"
path = "src/bin/uci-grabber-gui.rs"

[[bin]]
name = "uci-grabber-maia3-launcher"
path = "src/bin/uci-grabber-maia3-launcher.rs"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
directories = "6"
eframe = { version = "0.35", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
    "x11",
] }
flate2 = "1"
jiff = "0.2"
ring = "0.17"
rfd = "0.17.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
thiserror = "2"
ureq = "3.3"
url = "2.5"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
zstd = "0.13"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
